--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 	
 	<div ng-repeat="product in store.products">	
 
-		<section>
+		<section ng-init="tab = 1">
 			<ul class="nav nav-pills">
 			
 				<div class="panel">
 					<h4>Name</h4>
 					<p>{{product.name}}</p>
 				</div>
-		  		<!-- <li role="presentation" class="active"><a href ng-click="tab = 1">Name</a></li> -->
-		  		<li role="presentation"><a href ng-click="tab = 1">Price</a></li>
-		  		<li role="presentation"><a href ng-click="tab = 2">Description</a></li>
+			
+		  		<li role="presentation">
+		  			<li ng-class="{active:tab == 1}">
+		  			<a href ng-click="tab = 1">Price</a></li>
+		  			</li>
+		  		<li role="presentation">
+		  			<li ng-class="{active:tab == 2}">
+		  				<a href ng-click="tab = 2">Description</a></li>
+		  			</li>
 			</ul>
 
 
