--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 <body ng-controller="StoreController as store">
 	
 	<div ng-repeat="product in store.products">	
-
 		<section ng-init="tab = 1">
 			<ul class="nav nav-pills">
 			
@@ -19,14 +18,15 @@
 			
 		  		<li role="presentation">
 		  			<li ng-class="{active:tab == 1}">
-		  			<a href ng-click="tab = 1">Price</a></li>
+		  				<a href ng-click="tab = 1">Price</a>
 		  			</li>
+		  		</li>
 		  		<li role="presentation">
 		  			<li ng-class="{active:tab == 2}">
-		  				<a href ng-click="tab = 2">Description</a></li>
+		  				<a href ng-click="tab = 2">Description</a>
 		  			</li>
+		  		</li>
 			</ul>
-
 
 			<div class="panel" ng-show="tab == 1">
 				<h4>Price</h4>
@@ -36,10 +36,10 @@
 			<div class="panel" ng-show="tab == 2">
 				<h4>Description</h4>
 				<p>{{product.desc}}</p>
-			</div>
-		
+			</div>		
 		</section>
 	</div>
+	
 	<script type="text/javascript" src="js/angular.min.js"></script>	
 	<script type="text/javascript" src="js/store.js"></script>
 </body>
