--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 		  				<a href ng-click="tab.selectTab(2)">Description</a>
 		  			</li>
 		  		</li>
-
+		  		<li role="presentation">
+		  			<li ng-class="{active:tab.isSelected(3)}">
+		  				<a href ng-click="tab.selectTab(3)">Review</a>
+		  			</li>
+		  		</li>
 			</ul>
 
 			<div class="panel" ng-show="tab.isSelected(1)">
@@ -37,7 +41,38 @@
 			<div class="panel" ng-show="tab.isSelected(2)">
 				<h4>Description</h4>
 				<p>{{product.desc}}</p>
-			</div>		
+			</div>
+			<div class="panel" ng-show="tab.isSelected(3)">
+				<blockquote ng-repeat="review in product.reviews">
+					<b>{{review.stars}} Starts</b>
+					{{review.body}}
+					<cite>- {{review.author}}</cite>
+				</blockquote>
+
+
+				<form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewCtrl.addReview(product)">
+					<!-- Live preview -->
+					<blockquote>
+						<b>{{reviewCtrl.review.stars}} Star(s)</b>
+						<p>{{reviewCtrl.review.body}}</p>
+						<p>
+							<cite>- {{reviewCtrl.review.author}}</cite>
+						</p>
+					</blockquote>
+
+					<div class="form-group">
+						<select ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]">
+						</select>	
+					</div>
+					<div class="form-group">
+						<textarea class="form-control" placeholder="Leave a Review!" ng-model="reviewCtrl.review.body"></textarea>
+					</div>
+					<div class="form-group">
+						<input class="form-control" type="email" placeholder="email address" ng-model="reviewCtrl.review.author" />
+					</div>
+					<input type="submit" value="Submit">
+				</form>
+			</div>				
 		</section>
 	</div>
 
